tests/compile_fail/from_str/struct_non_flat_with_attribute.stderr
error: no attribute is allowed here
 --> tests/compile_fail/from_str/struct_non_flat_with_attribute.rs:2:3
  |
2 | #[from_str(rename_all = "lowercase")]
  |   ^^^^^^^^
